# otbforge

./: .gitignore  README.md  pyproject.toml
ai_core/: __init__.py  batch_generator.py  biome_analyzer.py  cli.py  json_codec.py  live_cli.py  live_client.py  llm_bridge.py  map_diff.py  map_stitcher.py  map_validator.py  minimap.py  models.py  otbm_live_serializer.py  otbm_reader.py  otbm_types.py  otbm_writer.py  patterns.py  region_extractor.py
ai_core/generators/: __init__.py  city.py  compositor.py  dungeon.py  house_placer.py  quest.py  road_generator.py  spawn_manager.py  spawns.py  terrain.py  town.py  vegetation.py  water_features.py
otbforge-rs/: Cargo.toml
otbforge-rs/crates/otbforge-ai/: Cargo.toml
otbforge-rs/crates/otbforge-ai/src/: lib.rs
otbforge-rs/crates/otbforge-cli/: Cargo.toml
otbforge-rs/crates/otbforge-cli/src/: main.rs
otbforge-rs/crates/otbforge-core/: Cargo.toml
otbforge-rs/crates/otbforge-core/src/: lib.rs
otbforge-rs/crates/otbforge-gen/: Cargo.toml
otbforge-rs/crates/otbforge-gen/src/: lib.rs
otbforge-rs/crates/otbforge-models/: Cargo.toml
otbforge-rs/crates/otbforge-models/src/: lib.rs
otbforge-rs/crates/otbforge-otbm/: Cargo.toml
otbforge-rs/crates/otbforge-otbm/src/: lib.rs
otbforge-rs/data/: item_catalog.json
otbforge-rs/examples/: otb_dumper.rs
tests/: test_batch_and_cli.py  test_cli.py  test_compositor.py  test_dungeon.py  test_generators.py  test_house.py  test_json_patterns_cli.py  test_live_protocol.py  test_llm_bridge.py  test_new_features.py  test_otbm.py  test_road.py  test_roundtrip.py  test_spawn.py  test_stitch_extract_minimap.py  test_terrain.py  test_town.py  test_validator.py  test_vegetation.py  test_water.py
