[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "otbforge"
version = "0.2.0"
description = "AI-powered Tibia OTBM map generator — terrain, dungeons, towns, LLM-driven maps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["tibia", "otbm", "opentibia", "map-generator", "ai", "game", "procedural"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.scripts]
otbforge = "ai_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ai_core", "ai_core.*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
