[workspace]
resolver = "3"
members = [
    "crates/otbforge-models",
    "crates/otbforge-otbm",
    "crates/otbforge-gen",
    "crates/otbforge-core",
    "crates/otbforge-ai",
    "crates/otbforge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bitupx00/otbforge"
description = "OTBForge — AI-powered OpenTibia map generation engine (Rust core)"

[workspace.dependencies]
# Internal crates
otbforge-models = { path = "crates/otbforge-models" }
otbforge-otbm = { path = "crates/otbforge-otbm" }
otbforge-gen = { path = "crates/otbforge-gen" }
otbforge-core = { path = "crates/otbforge-core" }
otbforge-ai = { path = "crates/otbforge-ai" }

# External deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
bitflags = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls"] }
