[package]
name = "otbforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for OTBForge — OTBM map generation & manipulation"

[[bin]]
name = "otbforge"
path = "src/main.rs"

[dependencies]
otbforge-models = { workspace = true }
otbforge-otbm = { workspace = true }
otbforge-gen = { workspace = true }
otbforge-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
