[package]
name = "otbforge-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core data types for OTBM map representation (OTBForge)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bitflags = { workspace = true }
