[package]
name = "otbforge-otbm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OTBM v2/v3 binary format reader and writer (OTBForge)"

[dependencies]
otbforge-models = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
